test/operator/add_string_nil.lox
"s" + null // error: Operation not allowed
